--- a/BotApiKung/.env.local
+++ b/BotApiKung/.env.local
@@ -1,1 +1,2 @@
-DISCORD_TOKEN="MTIwOTQ2MDMwMjE1Mjk5ODk5NA.Gq5pWh.tCCpH1Xu58uJ-MPP__v_GPQCgGXYF9qvJCNIYo"
+DISCORD_TOKEN="MTIxMDQ2NDQ2NjIxMTQ0MjY4OA.GDH8jZ.KJ7r012_4JwUYJiYmouFcKZoiTiSEmtobNPSos"
+OPENAI_API_KEY="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"
