--- a/BotApiKung/package.json
+++ b/BotApiKung/package.json
@@ -19,6 +19,7 @@
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.3",
     "nodemon": "^3.0.3",
+    "openai": "^4.28.0",
     "puppeteer": "^22.1.0"
   }
 }
