--- a/BotApiKung/.env.local
+++ b/BotApiKung/.env.local
@@ -1,2 +1,3 @@
 DISCORD_TOKEN="MTIxMDQ2NDQ2NjIxMTQ0MjY4OA.GDH8jZ.KJ7r012_4JwUYJiYmouFcKZoiTiSEm"
 OPENAI_API_KEY="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"
+BARD_API_KEY=""
